<resources>
    <string name="app_name">James_Collins_Hangman_Game</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Hangman!</string>
    <string name="guess_word_title">Guess the Word:</string>
    <string name="string_guess">GUESS</string>
    <string name="string_new_word">NEW WORD</string>
    <string name="guess_word">???</string>
    <string name="current_guesses">You have guessed: </string>
    <string name="remaining_guesses">Remaining Guesses: </string>
    <string name="remaining_guesses_num">6</string>
    <string name="current_guessed_letters"></string>


    <string-array name="words">
        <item>study</item>
        <item>national</item>
        <item>possible</item>
        <item>authority</item>
        <item>continue</item>
        <item>policy</item>
        <item>council</item>
        <item>research</item>
        <item>education</item>
        <item>enough</item>
        <item>towards</item>
        <item>anything</item>
    </string-array>
</resources>
