<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GameActivity"
    android:id="@+id/header"
    android:focusableInTouchMode="true">

    <!--Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/appTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        />

    <!--Hangman Picture-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_picture_status"
        android:layout_below="@+id/appTitle"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:src="@mipmap/hangman0"
        android:layout_toStartOf="@+id/appTitle"
        android:layout_toLeftOf="@+id/appTitle" />

    <!--Text for "Guess the Word:"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guess_word_title"
        android:id="@+id/guess_word_prompt"
        android:layout_alignTop="@+id/current_picture_status"
        android:layout_toRightOf="@+id/current_picture_status"
        android:layout_toEndOf="@+id/current_picture_status" />

    <!--guess_word display - will update as user guesses letters correctly-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guess_word"
        android:id="@+id/guess_word"
        android:layout_below="@+id/guess_word_prompt"
        android:layout_toRightOf="@+id/current_picture_status"
        android:layout_toEndOf="@+id/current_picture_status" />

    <!--spot for user to type letter in; limits user to one alphabet character guess-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_guess"
        android:layout_below="@+id/current_picture_status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:maxLength="1"
        android:digits="abcdefghijklmnopqrstuvwxyz"
        android:layout_toLeftOf="@+id/guess_word"
        android:layout_toStartOf="@+id/guess_word" />

    <!--Button: GUESS-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_guess"
        android:id="@+id/button_guess"
        android:layout_alignBottom="@+id/user_guess"
        android:layout_toRightOf="@+id/guess_word"
        android:layout_toEndOf="@+id/guess_word" />

    <!--Button: NEW WORD-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_new_word"
        android:id="@+id/button_new_word"
        android:layout_alignTop="@+id/button_guess"
        android:layout_toRightOf="@+id/guess_word_prompt"
        android:layout_toEndOf="@+id/guess_word_prompt"
        android:elegantTextHeight="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:id="@+id/linearLayout"
        android:layout_below="@+id/button_guess"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <!--What has user guessed-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_guesses"
            android:id="@+id/current_guesses"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_guessed_letters"
            android:id="@+id/guessed_letters" />

        <!--Remaining Guesses-->
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/remaining_guesses"
        android:id="@+id/remaining_guesses"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/remaining_guesses_num"
        android:id="@+id/num_guesses_left"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/remaining_guesses"
        android:layout_alignParentLeft="true" />


</RelativeLayout>
